[package]
name = "foxlive"
version = "0.1.0"
authors = ["bkfox <thomas bkfox net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures="0.3.4"
nix = "0.17.0"
bitflags="1.2.1"
smallvec="1.2.0"
petgraph="0.5.0"

jack="0.6.2"


[build-dependencies]
bindgen = "0.53.2"

