[package]
name = "libfoxlive"
version = "0.1.0"
authors = ["bkfox <thomas bkfox net>"]
edition = "2018"

[dependencies]
libc = "0.2"
bitflags="1.2"
smallvec="1.2"
petgraph="0.5"

futures="0.3"
futures-util = "0.3.4"
ringbuf="0.2"
bus="2.2"

sample="0.10.0"
jack="0.6.2"

libfoxlive_derive = { path = "../libfoxlive_derive" }

[build-dependencies]
bindgen = "0.53.2"

