[package]
name = "libfoxlive"
version = "0.1.0"
authors = ["bkfox <thomas bkfox net>"]
edition = "2018"
build="build/main.rs"

[features]
default = ["build"]

build = ["bindgen", "regex", "Inflector"]
jack = ["jack"]

[dependencies]
libc = "0.2"
bitflags="1.2"
smallvec="1.2"
petgraph="0.5"

futures="0.3"
futures-util = "0.3"
ringbuf="0.2"
bus="2.2"

sample="0.10"
jack= { version = "0.6", optional=true }

libfoxlive_derive = { path = "../libfoxlive_derive" }

Inflector = { version = "0.11", optional = true }
bindgen = { version = "0.53", optional = true }
regex = { version = "1.3", optional = true }

[build-dependencies]
bindgen = "0.53"
Inflector = "0.11"
regex = "1.3"

